[package]
name = "lt_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client_test.rs"

[profile.dev]
opt-level = 2
#overflow-checks = false  

[dependencies]
lt_server = { path = "../lt_server" }
rosc = "0.10.1"
socket2 = "0.5.8"
tokio = {version = "1.43.0", features = ["net", "rt", "macros", "rt-multi-thread", "sync"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
