[package]
name = "lt_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lt_server"
path = "src/bin/lt_server.rs"

[profile.dev]
opt-level = 2
#overflow-checks = false  

[dependencies]
lt_utilities = { path = "../lt_utilities" }
clap = "4.5.28"
colored = "3.0.0"
cpal = { version = "0.15.3", features = ["jack"] }
crossbeam = "0.8.4"
gag = "1.0.0"
rayon = "1.10.0"
realfft = "3.4.0"
rosc = "0.10.1"
socket2 = "0.5.8"
